# general_dagster_pipeline

./: .gitignore  Readme.md  pyproject.toml
experimental/: check_coinbase_function.py  check_uploaded_azurite.py  try_test_op.py
pipelines/: repository.py
pipelines/general/: resources.py  utility.py
pipelines/job_append_data/: aggregation.yaml  graph.py  job.py  op.py  trigger.py
pipelines/job_fetch_coinbase_data/: coinbase_functions.py  graph.py  job.py  ops.py  trigger.py
tests/: test_repo.py
